# Progetto_C_TheNetValue

./: CMakeLists.txt  Confronta_Record.c  Confronta_Record.h  Cripta_Decripta_vettore.c  Cripta_Decripta_vettore.h  Elimina_criminale.c  Elimina_criminale.h  Generazione_casuale.c  Generazione_casuale.h  Inserisci_record.c  Inserisci_record.h  Ordine_Alfabetico.c  Ordine_Alfabetico.h  Stampa.c  Stampa.h  inizializzazione.c  inizializzazione.h  main.c
