cmake_minimum_required(VERSION 3.19)
project(Progetto_C_Moi_Andrea C)

set(CMAKE_C_STANDARD 90)

add_executable(Progetto_C_Moi_Andrea main.c inizializzazione.c inizializzazione.h Inserisci_record.c Inserisci_record.h Stampa.c Stampa.h Generazione_casuale.c Generazione_casuale.h Confronta_Record.c Confronta_Record.h Cripta_Decripta_vettore.c Cripta_Decripta_vettore.h Elimina_criminale.c Elimina_criminale.h Ordine_Alfabetico.c Ordine_Alfabetico.h)